Fixed alignment of Upcoming

--- a/src/app/today/today.component.css
+++ b/src/app/today/today.component.css
@@ -1,3 +1,7 @@
+h2{
+  font-family: "Manjari", sans-serif;
+}
+
 ul {
   list-style: none;
 
